kubernetes/test/react-components-library/templates/deployment.yaml
---
# Source: react-components-library/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: "react-components-library-storybook"
spec:
    selector:
        matchLabels:
            app: "react-components-library-storybook"
    replicas: 1
    template:
        metadata:
            labels:
                app: "react-components-library-web"
                date: "1717932879"
        spec:
            containers:
                - name: "storybook"
                  image: "harbor.local.darkanakin41.com/react-components-library/storybook:latest"
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 80
