kubernetes/test/react-components-library/templates/ingress.yaml
---
# Source: react-components-library/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: react-components-library
    annotations:
        gethomepage.dev/description: My react component library
        gethomepage.dev/enabled: 'true'
        gethomepage.dev/group: Dev
        gethomepage.dev/href: react-components-library.local.darkanakin41.com
        gethomepage.dev/name: react-components-library
        gethomepage.dev/pod-selector: app.kubernetes.io/instance=react-components-library-storybook,pod.lifecycle in (permanent)

spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`react-components-library.local.darkanakin41.com`)
          services:
              - name: react-components-library-storybook
                port: 8080
