kubernetes/test/react-components-library/templates/service.yaml
---
# Source: react-components-library/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: "react-components-library-storybook"
spec:
    type: ClusterIP
    ports:
        - name: http
          port: 80
          targetPort: 80
    selector:
        app: "react-components-library-storybook"
